syntax = "proto3";

package ctpview_trader;

message message
{
    oneof MessageType
    {
        LoginControl     login_control        = 1;
    }
}

message LoginControl
{
    enum Command
    {
        reserve = 0;
        login   = 1;
        logout = 2;
    }
    Command command = 1;
}
